[package]
name = "member_teams"
version = "0.1.0"
authors = ["Aayush Kapoor <xeoneux@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.9"
diesel = "1.4.4"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.4"
juniper = "0.14.2"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
